feat: 게시판 좋아요, 조회수, event common 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,9 @@ rootProject.name = 'choru-board'
 
 include 'service:article'
 include 'service:comment'
+include 'service:like'
+include 'service:view'
 include 'common'
 include 'common:snowflake'
+include 'common:data-serializer'
+include 'common:event'
